# planted-solution-quantum-benchmarking

./: IMPROVEMENTS.md  README.md  make_filelist.py  mingap_single.py  pyproject.toml  qbench.py  requirements.txt  spectrum_single.py
examples/: README.md  general_degenerate_n6_seed0_instance.json  general_degenerate_n6_seed0_key.json  general_multiplanted_n6_instance.json  general_multiplanted_n6_key.json  general_scrambled_n6_instance.json  general_scrambled_n6_key.json  general_single_n8_instance.json  general_single_n8_key.json  planted_sat_n10_k3_instance.json  planted_sat_n10_k3_key.json
planted_benchmark/: __init__.py  assess.py  clauses.py  clifford.py  generator.py  pauli.py  reconstruct.py  serial.py  spectral.py  states.py  verify.py
tests/: test_suite.py
